--- a/src/styles.css
+++ b/src/styles.css
@@ -59,24 +59,30 @@ body {
 .square {
   background: #fff;
   border: 1px solid #999;
-  float: left;
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
   height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
   padding: 0;
   text-align: center;
   width: 34px;
 }
 
-.board-row:after {
-  clear: both;
-  content: '';
-  display: table;
+.highlight{
+  outline: 1px solid #0bba1a;
+  z-index: 5;
 }
+.board-row{
+  display: flex;
+}
+.move-step{
+  display: flex;
+  width: 300px;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: space-between;
 
+}
 .status {
   margin-bottom: 10px;
 }
@@ -87,4 +93,7 @@ body {
 
 .game-info {
   margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
